# artifacts/api-server/src/routes/index.ts
@@ -3,6 +3,7 @@ import healthRouter from "./health";
 import customersRouter from "./customers";
 import vehicleTypesRouter from "./vehicleTypes";
 import vehiclesRouter from "./vehicles";
+import bookingsRouter from "./bookings";
 
 const router: IRouter = Router();
 
@@ -10,5 +11,6 @@ router.use(healthRouter);
 router.use("/customers", customersRouter);
 router.use("/vehicle-types", vehicleTypesRouter);
 router.use("/vehicles", vehiclesRouter);
+router.use("/bookings", bookingsRouter);
 
 export default router;
